2007-12-20  Christophe Romain <christophe.romain@process-one.net>

	* doc/guide.tex: Explain how to launch installer and improve
	ejabberdctl usage example (EJAB-420)
	* doc/guide.html: Likewise

	* src/mod_pubsub/mod_pubsub.erl: PEP notification bugfix

2007-12-20  Badlop  <badlop@process-one.net>

	* src/msgs/zh.msg: Small update (thanks to Shelley Shyan)

	* src/msgs/ru.msg: Small update (thanks to Konstantin Khomoutov)

2007-12-19  Badlop  <badlop@process-one.net>

	* src/msgs/pl.msg: Updated (thanks to Andrzej Smyk)(EJAB-463)

	* src/msgs/de.msg: Updated (thanks to Cord Beermann)

	* src/msgs/es.msg: Small update (thanks to Badlop)

	* src/msgs/cs.msg: Small update (thanks to Lukas Polivka alias
	Spike411)

	* src/web/ejabberd_web_admin.erl: No need to translate copyright
	notice

2007-12-18  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_log.erl: Add handling of kicks 321, 322, 332

	* doc/guide.tex: Document mod_privacy_odbc
	
	* doc/Makefile: Support for conditional inclusion of documentation
	from contributed modules
	* doc/guide.tex: Likewise

2007-12-18  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Purge related pep nodes at remove_user
	* src/mod_pubsub/node_pep.erl: Likewise

2007-12-17  Badlop  <badlop@process-one.net>

	* src/ejabberd_zlib/Makefile.in: Compile all erl files found in
	the directory, so it isn't needed to provide an explicit list of
	target files
	* src/eldap/Makefile.in: Likewise
	* src/mod_irc/Makefile.in: Likewise
	* src/mod_muc/Makefile.in: Likewise
	* src/mod_proxy65/Makefile.in: Likewise
	* src/mod_pubsub/Makefile.in: Likewise
	* src/odbc/Makefile.in: Likewise
	* src/pam/Makefile.in: Likewise
	* src/stringprep/Makefile.in: Likewise
	* src/tls/Makefile.in: Likewise
	* src/web/Makefile.in: Likewise
	* src/ejabberd_zlib/Makefile.win32: Likewise
	* src/eldap/Makefile.win32: Likewise
	* src/mod_irc/Makefile.win32: Likewise
	* src/mod_muc/Makefile.win32: Likewise